unpackaged/main/default/objects/ffps_ihs__IntegrationLogLine__c/ffps_ihs__IntegrationLogLine__c.object-meta.xml
<CustomObject>
    <label>Integration Log Line</label>
    <nameField>
        <displayFormat>ILL{000000}</displayFormat>
        <label>Integration Log Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Log Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>