unpackaged/main/default/objects/ffps_ihs__IntegrationLogLine__c/fields/ffps_ihs__Details__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>