unpackaged/main/default/objects/ffps_ihs__IntegrationLogLine__c/fields/ffps_ihs__IntegrationLog__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__IntegrationLog__c</fullName>
    <label>Integration Log</label>
    <referenceTo>ffps_ihs__IntegrationLog__c</referenceTo>
    <relationshipLabel>Integration Log Lines</relationshipLabel>
    <relationshipName>IntegrationLogLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>