unpackaged/main/default/objects/ffps_ihs__IntegrationLogLine__c/fields/ffps_ihs__LineType__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__LineType__c</fullName>
    <label>Line type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>