unpackaged/main/default/objects/ffps_ihs__IntegrationLogLine__c/fields/ffps_ihs__RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__RelatedObject__c</fullName>
    <formula>HYPERLINK("/" &amp;  ffps_ihs__RelatedObjectId__c ,  ffps_ihs__RelatedObjectName__c  , "_self" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object</label>
    <type>Text</type>
</CustomField>