unpackaged/main/default/objects/ffps_ihs__IntegrationLogLine__c/fields/ffps_ihs__RelatedObjectId__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__RelatedObjectId__c</fullName>
    <label>Related Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>