unpackaged/main/default/objects/ffps_ihs__IntegrationLogLine__c/fields/ffps_ihs__RelatedObjectName__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__RelatedObjectName__c</fullName>
    <label>Related Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>